--- a/docker/graph/Dockerfile
+++ b/docker/graph/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r req.txt
+RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install  dgl -f https://data.dgl.ai/wheels/torch-2.3/repo.html
 
 # Make sure the scripts are executable
