--- a/docker/graph/requirements.txt
+++ b/docker/graph/requirements.txt
@@ -1,61 +1,10 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-cloudpickle==3.0.0
-contourpy==1.3.0
-cycler==0.12.1
-dgl==2.2.1
-dgllife==0.3.2
-filelock==3.16.0
-fonttools==4.53.1
-fsspec==2024.9.0
-future==1.0.0
-grpcio==1.66.1
-hyperopt==0.2.7
-idna==3.8
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-Jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.7
-Markdown==3.7
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-mpmath==1.3.0
-networkx==3.2.1
 numpy==2.0.2
-packaging==24.1
 pandas==2.2.2
-pillow==10.4.0
-pip==24.2
-protobuf==5.28.1
-psutil==6.0.0
-py4j==0.10.9.7
-pyaml==24.7.0
-pydantic==2.9.1
-pydantic_core==2.23.3
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pytz==2024.2
 PyYAML==6.0.2
 rdkit==2024.3.5
-requests==2.32.3
 scikit-learn==1.5.2
-scikit-optimize==0.10.2
-scipy==1.13.1
-setuptools==70.0.0
-six==1.16.0
-sympy==1.13.2
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-threadpoolctl==3.5.0
-torch==2.3.0
-torchdata==0.8.0
 tqdm==4.66.5
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-Werkzeug==3.0.4
-wheel==0.44.0
-zipp==3.20.1
+torch==2.3.0
+pydantic
+#dgl ==2.2.1
+dgllife #==0.3.2
